--- a/~!.emacs.d/features/spell.org
+++ b/~!.emacs.d/features/spell.org
@@ -24,7 +24,7 @@ Since spellchecking can be slow in some buffers, this can be disabled with:
              flyspell-correct-previous-word-generic)
   :defer t
   :ensure nil
-  :quelpa (flyspell-correct :fetcher github :repo "d12frosted/flyspell-correct")
+  ;; :quelpa (flyspell-correct :fetcher github :repo "d12frosted/flyspell-correct")
   :init
   ;; (add-hook 'flyspell-mode-hook 'flyspell-popup-auto-correct-mode)
   :general
