put org-journal cache file away

--- a/~!.emacs.d/features/org.org
+++ b/~!.emacs.d/features/org.org
@@ -415,6 +415,7 @@ CLOSED: [2019-10-22 Tue 16:34]
   :defer t
   :custom
   (org-journal-dir "~/io/journal/")
+  (org-journal-cache-file (concat x/cache-dir "org-journal.cache"))
   (org-journal-file-type `weekly)
   (org-journal-file-format "%Y-%m-%d")
   (org-journal-date-format "%A, %d %B %Y")
