ignore archive folder

--- a/~!.emacs.d/features/org.org
+++ b/~!.emacs.d/features/org.org
@@ -391,7 +391,7 @@ CLOSED: [2019-10-22 Tue 16:34]
         ;; de-couples filename and note title:
         deft-use-filename-as-title t
         deft-use-filter-string-for-filename t
-        deft-recursive-ignore-dir-regexp "\\(?:\\.\\|\\.\\.\\|www\\)$"
+        deft-recursive-ignore-dir-regexp "\\(?:\\.\\|\\.\\.\\|\\.archives\\|www\\)$"
         ;; deft-ignore-file-regexp "\\(?:www/*\\)"
         ;; deft-recursive-ignore-dir-regexp "\\(?:www\\)"
         ;; deft-org-mode-title-prefix t
