fix company backends

--- a/~!.emacs.d/core/autoload.org
+++ b/~!.emacs.d/core/autoload.org
@@ -5,6 +5,11 @@
 * Awesome Functions
 
 #+begin_src emacs-lisp
+(defun doom-enlist (exp)
+  "Return EXP wrapped in a list, or as-is if already a list."
+  (declare (pure t) (side-effect-free t))
+  (if (listp exp) exp (list exp)))
+
 ;;;###autoload
 (defun x|switch-to-other-buffer ()
   "to the other buffer."
