--- a/~!.emacs.d/features/company.org
+++ b/~!.emacs.d/features/company.org
@@ -2,6 +2,85 @@
 #+TITLE: Auto Complete with Company
 #+PROPERTY: header-args :tangle (concat x/lisp-dir "feature-company.el")
 
+autoload
+#+begin_src emacs-lisp
+
+;;;###autoload
+(defvar +company-backend-alist
+  '((text-mode company-dabbrev company-yasnippet company-ispell)
+    (prog-mode company-capf company-yasnippet)
+    (conf-mode company-capf company-dabbrev-code company-yasnippet))
+  "An alist matching modes to company backends. The backends for any mode is
+built from this.")
+
+;;;###autodef
+(defun set-company-backend! (modes &rest backends)
+  "Prepends BACKENDS (in order) to `company-backends' in MODES.
+
+MODES should be one symbol or a list of them, representing major or minor modes.
+This will overwrite backends for MODES on consecutive uses.
+
+If the car of BACKENDS is nil, unset the backends for MODES.
+
+Examples:
+
+  (set-company-backend! 'js2-mode
+    'company-tide 'company-yasnippet)
+
+  (set-company-backend! 'sh-mode
+    '(company-shell :with company-yasnippet))
+
+  (set-company-backend! '(c-mode c++-mode)
+    '(:separate company-irony-c-headers company-irony))
+
+  (set-company-backend! 'sh-mode nil)  ; unsets backends for sh-mode"
+  (declare (indent defun))
+  (dolist (mode (doom-enlist modes))
+    (if (null (car backends))
+        (setq +company-backend-alist
+              (delq (assq mode +company-backend-alist)
+                    +company-backend-alist))
+      (setf (alist-get mode +company-backend-alist)
+            backends))))
+
+
+;;
+;;; Library
+
+(defun +company--backends ()
+  (let (backends)
+    (let ((mode major-mode)
+          (modes (list major-mode)))
+      (while (setq mode (get mode 'derived-mode-parent))
+        (push mode modes))
+      (dolist (mode modes)
+        (dolist (backend (append (cdr (assq mode +company-backend-alist))
+                                 (default-value 'company-backends)))
+          (push backend backends)))
+      (delete-dups
+       (append (cl-loop for (mode . backends) in +company-backend-alist
+                        if (or (eq major-mode mode)  ; major modes
+                               (and (boundp mode)
+                                    (symbol-value mode))) ; minor modes
+                        append backends)
+               (nreverse backends))))))
+
+
+;;
+;;; Hooks
+
+;;;###autoload
+(defun +company-init-backends-h ()
+  "Set `company-backends' for the current buffer."
+  (if (not company-mode)
+      (remove-hook 'change-major-mode-after-body-hook #'+company-init-backends-h 'local)
+    (unless (eq major-mode 'fundamental-mode)
+      (setq-local company-backends (+company--backends)))
+    (add-hook 'change-major-mode-after-body-hook #'+company-init-backends-h nil 'local)))
+
+(put '+company-init-backends-h 'permanent-local-hook t)
+#+end_src
+
 #+begin_src emacs-lisp
 (use-package company
   :commands (company-complete-common company-manual-begin company-grab-line)
@@ -15,15 +94,16 @@
    company-dabbrev-code-other-buffers t
    company-tooltip-align-annotations t
    company-require-match 'never
-   ;; company-global-modes
-   ;; '(not erc-mode message-mode help-mode gud-mode eshell-mode)
-   ;; company-backends '(company-capf)
+   company-global-modes
+   '(not erc-mode message-mode help-mode gud-mode eshell-mode)
+   company-backends '(company-capf company-yasnippet)
    company-frontends
    '(company-pseudo-tooltip-frontend
      company-echo-metadata-frontend)
    )
   :config
   (add-hook 'company-mode-hook #'evil-normalize-keymaps)
+  (add-hook 'company-mode-hook #'+company-init-backends-h)
   (global-company-mode +1)
   ;; (company-tng-configure-default)
 )
