--- a/~!.emacs.d/features/lsp.org
+++ b/~!.emacs.d/features/lsp.org
@@ -76,7 +76,7 @@
 * company-lsp
 
 #+begin_src emacs-lisp
-(defvar +lsp-company-backend 'company-lsp
+(defvar +lsp-company-backend '(company-lsp :with company-yasnippet)
   "What backend to prepend to `company-backends' when `lsp-mode' is active.
 
 This can be a single company backend or a list thereof. It can be anything
@@ -89,16 +89,19 @@ This can be a single company backend or a list thereof. It can be anything
   ;; Make sure that `company-capf' is disabled since it is incompatible with
   ;; `company-lsp' (see lsp-mode#884)
   (add-hook 'lsp-mode-hook
-    (defun +lsp-init-company-h ()
-      (if (not (bound-and-true-p company-mode))
-          (add-hook 'company-mode-hook #'+lsp-init-company-h t t)
-        (setq-local company-backends
-                    (cons +lsp-company-backend
-                          (remq 'company-capf company-backends)))
-        (remove-hook 'company-mode-hook #'+lsp-init-company-h t))))
-
+            (defun +lsp-init-company-h ()
+              (if (not (bound-and-true-p company-mode))
+                  (add-hook 'company-mode-hook #'+lsp-init-company-h t t)
+                (setq-local company-backends
+                            (cons +lsp-company-backend
+                                  (remq 'company-capf company-backends)))
+                (remove-hook 'company-mode-hook #'+lsp-init-company-h t))))
   :config
   ;; (push '(company-lsp :with company-yasnippet) company-backends)
+  ;; (set (make-local-variable 'company-backends) '((company-lsp :with company-yasnippet)))
+  ;; (setq-local company-backends '((company-lsp :with company-yasnippet)))
+  ;; (push '(company-lsp :with company-yasnippet) company-backends)
+  ;; (set-company-backend! 'lsp-mode '(company-lsp :with company-yasnippet))
   (setq company-lsp-cache-candidates 'auto)
   ;; (setq
   ;;  company-lsp-async t
