--- a/~!.emacs.d/features/snippets.org
+++ b/~!.emacs.d/features/snippets.org
@@ -21,7 +21,11 @@
 
 (use-package yasnippet
   :config
-  (yas-global-mode 1))
+  (yas-global-mode 1)
+  :general
+  (map|insert
+   "s" '(yas-insert-snippet :which-key "Snippets")))
+
 (provide 'feature-snippets)
 #+end_src
 
