--- a/~!.emacs.d/init.org
+++ b/~!.emacs.d/init.org
@@ -21,7 +21,7 @@
  'feature-spell
  'feature-translate
  'feature-ledger
- ;; 'feature-write
+ 'feature-write
  'feature-git
  'feature-project
  'feature-dired
