--- a/~!.emacs.d/features/write.org
+++ b/~!.emacs.d/features/write.org
@@ -15,6 +15,8 @@
 (defvar +write-mode-map (make-sparse-keymap)
   "TODO")
 
+(setq visual-fill-column-width 80)
+
 ;;;###autoload
 (define-minor-mode +write-mode
   "Turns Emacs into a more comfortable writing environment and word processor."
