--- a/~!.emacs.d/core/ui.org
+++ b/~!.emacs.d/core/ui.org
@@ -13,7 +13,7 @@
 
 * Font & Icons
 #+begin_src emacs-lisp
-(add-to-list 'default-frame-alist '(font . "Fira Code 14"))
+(add-to-list 'default-frame-alist '(font . "Fira Code"))
 (use-package all-the-icons)
 #+end_src
 
@@ -44,7 +44,7 @@
 #+begin_src emacs-lisp
 (use-package doom-themes
   :config
-  (load-theme 'doom-one t)
+  (load-theme 'doom-one-light t)
   ;; Enable custom neotree theme (all-the-icons must be installed!)
   ;;(doom-themes-neotree-config)
   ;; or for treemacs users
@@ -70,7 +70,11 @@ solaire-mode.
 #+begin_src emacs-lisp
 (use-package doom-modeline
   :defer t
-  :hook (after-init . doom-modeline-mode))
+  :hook (after-init . doom-modeline-mode)
+  :config
+  (size-indication-mode +1) ; filesize in modeline
+  (column-number-mode +1)   ; cursor column in modeline
+  )
 #+end_src
 
 * which-key
