--- a/~!.emacs.d/features/org.org
+++ b/~!.emacs.d/features/org.org
@@ -358,6 +358,7 @@ Yank link from clipboard and insert =more= org-mode link.
 (use-package org
   :ensure org-plus-contrib
   :init
+  (add-hook 'org-mode-hook (lambda () (setq fill-column 70)))
   ;; (add-hook 'org-mode-hook 'flyspell-mode)
   :config
   (require 'org-tempo)
