--- a/~!.emacs.d/features/org.org
+++ b/~!.emacs.d/features/org.org
@@ -257,7 +257,7 @@ Yank link from clipboard and insert =more= org-mode link.
     ("k" org-move-subtree-up "promote")
     ("h" org-promote-subtree "promote")
     ("l" org-demote-subtree "demote"))
-  (map|org
+  (map|notes
     "c" '(org-capture :which-key "Capture")
     "a" '(org-agenda :which-key "Agenda"))
   (map|local 'org-mode-map
@@ -515,8 +515,8 @@ CLOSED: [2019-10-22 Tue 16:34]
           (case-fn . downcase)))
   :config
   :general
-  (map|org
-    "n" '(deft :which-key "Deft")))
+  (map|notes
+    "d" '(deft :which-key "Open deft")))
 ;; start filtering immediately
 ;; (set-evil-initial-state! 'deft-mode 'insert)
 ;; (map! :map deft-mode-map
@@ -555,7 +555,7 @@ CLOSED: [2019-10-22 Tue 16:34]
   (org-journal-file-format "%Y-%m-%d")
   (org-journal-date-format "%A, %d %B %Y")
   :general
-  (map|org
+  (map|notes
     "j" '(org-journal-new-entry :which-key "Journal"))
   )
 #+end_src
