key bindings for emacs

--- a/~!.emacs.d/features/ivy.org
+++ b/~!.emacs.d/features/ivy.org
@@ -25,8 +25,6 @@ Simple but effective sorting and filtering for Emacs.
 counsel, a collection of Ivy-enhanced versions of common Emacs commands.
 #+begin_src emacs-lisp
 (use-package counsel
-  :bind
-  ("M-F" . counsel-projectile-ag)
   :general
   (map|file
     "f" '(counsel-find-file :which-key "find file")
@@ -38,17 +36,21 @@ counsel, a collection of Ivy-enhanced versions of common Emacs commands.
     ;; "b" '(:ignore t :which-key "Buffers")
     ;; "b b" '(counsel-ibuffer :which-key "ibuffer")
     ":" 'counsel-M-x)
-  :bind
-  ("M-x" . counsel-M-x)
-  ("C-c k" . counsel-ag))
+  (map|global
+    "M-F" 'counsel-projectile-ag
+    "M-b" 'counsel-switch-buffer
+    "M-p" 'counsel-projectile-find-file
+    "M-P" 'counsel-projectile-switch-project
+    "M-x" 'counsel-M-x
+    "C-c k" 'counsel-ag))
 #+end_src
-
 
 swiper, an Ivy-enhanced alternative to isearch.
 #+begin_src emacs-lisp
 (use-package swiper
-  :bind
-  ("M-f" . swiper))
+  :general
+  (map|global
+    "M-f" 'swiper))
 #+end_src
 
 
