--- a/~!.emacs.d/core/keys.org
+++ b/~!.emacs.d/core/keys.org
@@ -56,6 +56,10 @@ If any hook returns non-nil, all hooks after it are ignored.")
     :prefix "SPC n"
     :non-normal-prefix "C-SPC n")
 
+  (general-create-definer map|global
+    :states '(normal visual insert emacs)
+    :keymaps 'override)
+
   (map!
     ;; simple command
     "u"   '(universal-argument :which-key "Universal argument")
@@ -83,18 +87,18 @@ If any hook returns non-nil, all hooks after it are ignored.")
     )
 
   ;; conventions
-  (general-define-key
-   :keymaps 'global ;; use to be override
+  (map|global
    "M-a" 'mark-whole-buffer
    "M-s" 'save-buffer
+   "M-S" 'save-some-buffers
    "M-q" 'save-buffers-kill-terminal
-   "M-b" 'counsel-ibuffer
    "M-w" 'delete-frame
    "M-o" 'ranger
-   "M-p" 'counsel-projectile-find-file
-   "M-P" 'counsel-projectile-switch-project
    "M-n" 'make-frame-command
    "M-v" 'yank
+   "M-=" 'text-scale-increase
+   "M--" 'text-scale-decrease
+   "M-0" '(lambda () (interactive)(text-scale-set 0))
    "M-RET" 'toggle-frame-fullscreen)
 
   (global-set-key (kbd "M-`") 'x|switch-to-other-buffer)
@@ -102,6 +106,7 @@ If any hook returns non-nil, all hooks after it are ignored.")
 #+end_src
 
 * hydra
+** hydra setup
 #+begin_src emacs-lisp
 (use-package hydra
   ;; :bind (("s-b" . hydra-buffer/body))
@@ -111,22 +116,6 @@ If any hook returns non-nil, all hooks after it are ignored.")
     "z" 'hydra-text-zoom/body)
   :config
   (hydra-add-font-lock)
-
-  (defhydra hydra-buffer ()
-    "buffer"
-    ("b" counsel-ibuffer "buffers" :exit t)
-    ("x" kill-this-buffer "kill buffer" :exit t)
-    ("m" buffer-menu "buffer-menu" :exit t)
-    ("h" switch-to-prev-buffer "prev")
-    ("l" switch-to-next-buffer "next"))
-
-  (defhydra hydra-text-zoom (:hint t :color red)
-    "
-      Text zoom: _j_:zoom in, _k_:zoom out, _0_:reset
-"
-    ("j" text-scale-increase "in")
-    ("k" text-scale-decrease "out")
-    ("0" (text-scale-set 0) "reset"))
 
   (defhydra hydra-buffer-menu (:color pink
                                :hint nil)
@@ -162,6 +151,29 @@ _~_: modified      ^ ^                ^ ^                ^^                     
   )
 #+end_src
 
+** buffer
+#+begin_src emacs-lisp
+;;;###autoload (autoload 'hydra-buffer/body (concat x/lisp-dir "core-keys.el") nil t)
+(defhydra hydra-buffer ()
+  "buffer"
+  ("b" counsel-ibuffer "buffers" :exit t)
+  ("x" kill-this-buffer "kill buffer" :exit t)
+  ("m" buffer-menu "buffer-menu" :exit t)
+  ("h" switch-to-prev-buffer "prev")
+  ("l" switch-to-next-buffer "next"))
+#+end_src
+
+** text zoom
+#+begin_src emacs-lisp
+;;;###autoload (autoload hydra-text-zoom/body (concat x/lisp-dir "core-keys.el") nil t)
+(defhydra hydra-text-zoom (:hint t :color red)
+  "
+      Text zoom: _j_:zoom in, _k_:zoom out, _0_:reset
+"
+  ("j" text-scale-increase "in")
+  ("k" text-scale-decrease "out")
+  ("0" (text-scale-set 0) "reset"))
+#+end_src
 * Provide the Package
 #+begin_src emacs-lisp
 (provide 'core-keys)
