--- a/~!.emacs.d/features/ivy.org
+++ b/~!.emacs.d/features/ivy.org
@@ -37,6 +37,7 @@ counsel, a collection of Ivy-enhanced versions of common Emacs commands.
     ;; "b b" '(counsel-ibuffer :which-key "ibuffer")
     ":" 'counsel-M-x)
   (map|global
+    "M-o" 'counsel-find-file
     "M-F" 'counsel-projectile-ag
     "M-b" 'counsel-switch-buffer
     "M-p" 'counsel-projectile-find-file
