--- a/~!.emacs.d/features/ivy.org
+++ b/~!.emacs.d/features/ivy.org
@@ -8,6 +8,11 @@ ivy: a generic completion mechanism for Emacs
   :diminish ivy-mode
   :config
   (ivy-mode 1)
+  (setq ivy-use-selectable-prompt t
+        ivy-virtual-abbreviate 'full
+        projectile-completion-system 'ivy
+        ivy-on-del-error-function nil
+        )
   (bind-key "C-c C-r" 'ivy-resume))
 #+end_src
 
