--- a/~!.emacs.d/init.org
+++ b/~!.emacs.d/init.org
@@ -19,6 +19,7 @@
  'feature-org
  'feature-company
  'feature-spell
+ 'feature-flycheck
  'feature-translate
  'feature-ledger
  'feature-write
@@ -35,6 +36,7 @@
  'feature-yaml
  'feature-lua
  'feature-swift
+ 'feature-rest
  'feature-elm
  'feature-docker)
 #+end_src
