--- a/~!.emacs.d/core/bootstrap.org
+++ b/~!.emacs.d/core/bootstrap.org
@@ -174,6 +174,29 @@ Other defaults.
   "If non-nil, Emacs is in interactive mode.")
 #+end_src
 
+* Frame Size
+#+begin_src emacs-lisp
+(if (display-graphic-p)
+    (progn
+      (setq initial-frame-alist
+            '(
+              (tool-bar-lines . 0)
+              (width . 106) ; chars
+              (height . 60) ; lines
+              (left . 50)
+              (top . 50)))
+      (setq default-frame-alist
+            '(
+              (tool-bar-lines . 0)
+              (width . 106)
+              (height . 60)
+              (left . 50)
+              (top . 50))))
+  (progn
+    (setq initial-frame-alist '( (tool-bar-lines . 0)))
+    (setq default-frame-alist '( (tool-bar-lines . 0)))))
+#+end_src
+
 * Initialize The Core
 
 #+begin_src emacs-lisp
