--- a/~!.emacs.d/features/lsp.org
+++ b/~!.emacs.d/features/lsp.org
@@ -60,16 +60,25 @@
 #+begin_src emacs-lisp
 (use-package lsp-ui
   :after (lsp)
+  :hook (lsp-mode . lsp-ui-mode)
+  :init
   :config
-  (setq
-   lsp-prefer-flymake nil
-   lsp-ui-doc-max-height 8
-   lsp-ui-doc-max-width 35
-   lsp-ui-flycheck-live-reporting nil
-   lsp-ui-sideline-enable nil
-   lsp-ui-sideline-show-diagnostics nil
-   lsp-ui-sideline-ignore-duplicate t)
-  )
+  (setq lsp-prefer-flymake nil
+        lsp-ui-doc-max-height 8
+        lsp-ui-doc-max-width 35
+        lsp-ui-sideline-ignore-duplicate t
+        ;; lsp-ui-doc is redundant with and more invasive than
+        ;; `+lookup/documentation'
+        lsp-ui-doc-enable nil
+        ;; Don't show symbol definitions in the sideline. They are pretty noisy,
+        ;; and there is a bug preventing Flycheck errors from being shown (the
+        ;; errors flash briefly and then disappear).
+        lsp-ui-sideline-show-hover nil)
+  (require 'flycheck nil t)
+  (require 'lsp-ui-flycheck)
+  (lsp-ui-flycheck-enable t))
+
+
 
 #+end_src
 
