switch to JetBrains Mono font

--- a/~!.emacs.d/core/ui.org
+++ b/~!.emacs.d/core/ui.org
@@ -13,8 +13,10 @@
 
 * Font & Icons
 #+begin_src emacs-lisp
-(add-to-list 'default-frame-alist '(font . "Fira Code"))
+(add-to-list 'default-frame-alist '(font . "JetBrainsMono Nerd Font"))
 (use-package all-the-icons)
+(cond ((and IS-MAC (fboundp 'mac-auto-operator-composition-mode))
+       (mac-auto-operator-composition-mode)))
 #+end_src
 
 * Theme
