--- a/~!.emacs.d/core/ui.org
+++ b/~!.emacs.d/core/ui.org
@@ -12,8 +12,15 @@
 #+end_src
 
 * Font & Icons
+Setting the fonts. Default to =Menlo= if none of the fancy ones were installed.
 #+begin_src emacs-lisp
-(add-to-list 'default-frame-alist '(font . "JetBrainsMono Nerd Font"))
+(let* ((candidates '("JetBrainsMono Nerd Font" "Fira Code"))
+       (chosen (seq-find (lambda (n) (member n (font-family-list))) candidates "Menlo")))
+  (cl-pushnew
+   (cons 'font chosen)
+   default-frame-alist
+   :key #'car :test #'eq))
+
 (use-package all-the-icons)
 (cond ((and IS-MAC (fboundp 'mac-auto-operator-composition-mode))
        (mac-auto-operator-composition-mode)))
