--- a/~!.emacs.d/features/web.org
+++ b/~!.emacs.d/features/web.org
@@ -91,7 +91,7 @@ rjsx-mode
          (progn (goto-char (match-beginning 1))
                 (not (sp-point-in-string-or-comment)))))
   (add-to-list 'magic-mode-alist '(+javascript-jsx-file-p . rjsx-mode))
-  (add-hook 'rjsx-mode-hook #lsp-deferred)
+  (add-hook 'rjsx-mode-hook #'lsp-deferred)
   :config
   ;; (set-electric! 'rjsx-mode :chars '(?\} ?\) ?. ?>))
   ;; (when (featurep! :feature syntax-checker)
