--- a/~!.emacs.d/features/org.org
+++ b/~!.emacs.d/features/org.org
@@ -449,7 +449,8 @@ CLOSED: [2019-10-22 Tue 16:34]
 (use-package org-tree-slide
   :commands (org-tree-slide-mode)
   :config
-  (org-tree-slide-simple-profile)
+  (org-tree-slide-presentation-profile)
+  ;; (org-tree-slide-simple-profile)
   ;; (setq
   ;;   org-tree-slide-activate-message " "
   ;;   org-tree-slide-deactivate-message " "
